--- a/public/index.html
+++ b/public/index.html
@@ -216,7 +216,7 @@
 <div class="dream-grid opacity-0">
   
     <div class="w-full md:w-1/2 lg:w-1/3 xl:w-1/4 p-4 dream-column">
-      <a class="card bg-base-100 hover:bg-base-content/10 shadow-xl cursor-pointer dark:border dark:border-base-content/30" href="/posts/test/">
+      <a class="card bg-base-100 hover:bg-base-content/10 shadow-xl cursor-pointer dark:border dark:border-base-content/30" href="/posts/worldsfair/">
   
   <figure>
     
